# visualizer

./: .gitignore  package.xml  setup.py
data/: .gitkeep  prop_C.json  test_01.json
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/visualizer/lib/visualizer/: caster_kinematic_estimator_node  key_stop_plot_node  plot_node  record_node  trajectory_triptych
install/visualizer/share/visualizer/: package.bash  package.ps1  package.sh  package.zsh
launch/: record_and_plot.launch.py
log/: latest_build
scripts/: run_plot_node.sh  run_record_node.sh
visualizer/: __init__.py  compare_metrics_table.py  pose_error_plot.py  trajectory_triptych.py
